Corregidos margenes y paddings en el CSS inicial de prueba

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <nav>
-    <img class="nav--inline" src="img/logo.png" width="75" height="75" alt="" />
+    <img class="img--nav nav--inline " src="img/logo.png" width="75" height="75" alt="" />
     <h1 class="header--nav nav--inline ">SOS REFUGEES</h1>
     <div class="sociales">
       <img class="r--sociales" src="img/t.png" alt="">
