--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>SOS REFUGEES</title>
+  <title>RED ALERT REFUGEES</title>
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="css/flexslider.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/flexslider-dist.css">
+  <link rel="stylesheet" href="css/style-dist.css">
 </head>
 <body>
   <nav>
     <img class="img--nav nav--inline " src="img/logo.png" width="75" height="75" alt="" />
-    <h1 class="header--nav nav--inline ">SOS REFUGEES</h1>
+    <h1 class="header--nav nav--inline ">RED ALERT REFUGEES</h1>
     <div class="sociales">
-      <img class="r--sociales" src="img/t.png" alt="">
-      <img class="r--sociales" src="img/f.png" alt="">
-      <img class="r--sociales" src="img/g.png" alt="">
+      <a href="https://twitter.com/redalert2016"><img class="r--sociales" src="img/g.png" alt=""></a>
+      <a href="https://www.facebook.com/Red-Alert-Refugees-455053258027430/?fref=ts"><img class="r--sociales" src="img/f.png" alt=""></a>
     </div>
   </nav>
   <div class="flexslider">
@@ -31,23 +31,38 @@
     <li>
       <img src="img/slide4.jpg" />
     </li>
+    <li>
+      <img src="img/slide6.jpg" />
+    </li>
+    <li>
+      <img src="img/slide7.jpg" />
+    </li>
     </ul>
   </div>
   <section class="about">
-    <h2>Sobre SOS REFUGEES:</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium assumenda, odio omnis neque temporibus consequatur eligendi quam consequuntur perferendis placeat ratione quae expedita, sunt enim repellat reiciendis sed architecto. .Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam ipsum ipsa corrupti, pariatur aliquid, sequi laborum, accusamus libero alias quo reiciendis nihil modi in ratione temporibus beatae aut ab provident. .Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta laudantium iusto, quod velit ullam sit amet numquam porro aliquid ex consequatur dolorem rerum consequuntur. Deserunt ipsum, aliquid illo cum velit.</p>
+    <h2>Sobre RED ALERT REFUGEES:</h2>
+    <p>A la busqueda de la máxima eficacia y reducción de tiempo, RED ALERT coordina envíos humanitarios de emergencia a las fronteras colapsadas de Europa.
+    RED ALERT ha conseguido que una agrupación de voluntarios se convierta en una red estructurada de pequeños grupos de trabajo según nacionalodades.
+    Funcionando en distintas salas de trabajo, distribuidas a través de Whatsapp, siempre a la espera de la llegada de los refugiados, para aportarles recepción, acogida y apoyo.
+    El grupo de trabajo de Red Alert se distribuye en las siguientes salas, trabajándose en todas ellas a través de Whatsapp: Whatsapp sirio, Whatsapp iraquí, afgano, y yaisidi, otra sala de trabajo sería la de "alerta en fronteras", y por último, el grupo de trabajo central.
+    <br>
+    A quien le pueda interesar rogamos adhesión y difusión, nadie cometió un error más grande que el que no hizo nada porque no podía hacer nada.
+    </p>
   </section>
   <footer>
-    <h3 class="inline--footer">Contactanos</h3>
+    <h3 class="inline--footer"><a class="ancla--footer" href="mailto:redalertrefugiados@gmail.com">Contactanos por E-mail</a></h3>
     <p class="inline--footer">
-      &copy SOS REFUGEES 2016
+      &copy RED ALERT REFUGEES 2016
     </p>
     <p class="inline--footer">
-      Colabora
+      Colabora:
+    </p>
+    <p class="inline--footer">
+    Nº de telefono/Whatsapp: +0034 609 670 100 ~ Nº de cuenta Bancaria: ES95 2080 5040 5830 4002 3249
     </p>
   </footer>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
 <script src="js/fex-min.js"></script>
-<script src="js/file.js"></script>
+<script src="js/file-dist.js"></script>
 </html>
